# oil_project

./: .gitignore  CMakeLists.txt  README.md  main.py  resinsight_visualizer_v2.py
build_nmake_release/: edfm_core.exp  edfm_core.lib
build_vs2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  edfm_core.vcxproj  edfm_core.vcxproj.filters  edfm_core_corner.vcxproj  edfm_core_corner.vcxproj.filters  edfm_core_corner_lgr.vcxproj  edfm_core_corner_lgr.vcxproj.filters  edfm_python_bindings.sln
front/: __init__.py  data_models.py  input_panel.py  main_window.py  simulation_runner.py
src/: edfm_3d_blackoil_lgr.cpp
src/basic/: Corner_Point_Grid_edfm_3d_water_oil.cpp  UPGRATED_rearrangement_Corner_Point_Grid_edfm_3d_water_oil_ILUT+BiCGSTAB.cpp
src/basic/output/: corner_grid_plot_pressure_field.cpp
src/lgr/: LGR_UPGRATED_rearrangement_Corner_Point_Grid_edfm_3d_water_oil_ILUT+BiCGSTAB.cpp  edfm_3d_blackoil_lgr.cpp
visual/: __init__.py  vtk_renderer.py
